chore: fix background color issue when going to dark mode

--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -6,8 +6,8 @@
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  /* --background-start-rgb: 214, 219, 220; */
+  /* --background-end-rgb: 255, 255, 255; */
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -104,4 +104,9 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.button_test {
+  background-color: #000000;
+  text-transform: none;
 }
