--- a/src/app/css/page.css
+++ b/src/app/css/page.css
@@ -4,12 +4,12 @@
   align-items: center; */
   padding: 3rem;
   min-height: 100vh;
-  background-color: white;
-  color: black;
+  /* background-color: white;
+  color: black; */
 }
 
 .page_title {
-  color: black;
+  /* color: black; */
   padding: 10px 0;
 }
 
